# smart-cut

./: .gitignore  20230102_smart_cut_dump.sql  README.md  css 아이콘 정리.txt  db.sqlite3  manage.py  procedure.txt  pyproject.toml  secrets.json
AI/Code/: smart_cut_pipeline_Rev_A.ipynb  smart_cut_pipeline_Rev_B.ipynb  smart_cut_tensor_vgg16.ipynb
api/: admin.py  models.py  mysql_conn.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_face_shopfile.py  0003_authtokentoken.py  0004_auto_20221221_2227.py  0005_authgroup_authgrouppermissions_authpermission_authtokentoken_authuser_authusergroups_authuseruserper.py  0006_auto_20221222_0029.py  0007_auto_20221226_1348.py  0008_auto_20221229_1428.py  0009_userinfodetail.py  0010_alter_userinfo_table.py  0011_hairstyle.py
chat/: consumers.py  routing.py  urls.py  views.py
reservation/: urls.py  views.py
review/: urls.py  views.py
salon/: urls.py  views.py
smart_cut/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: 10_joinMbs.css  11_authNum.css  12_joinMbs_complete.css  13_main.css  14_1_salonDetails.css  14_2_salonDesigner.css  14_3_salonPhotos.css  15_review.css  16_map.css  17_map_search.css  18_calendar.css  18_reservation.css  19_reservationHistory.css  1_logoScreen.css  20_chatting.css  21_chatRoom.css  22_AI_Photo.css  24_AI_Complete.css  2_serviceExp1.css  32_modifyProfile.css  33_reservSet.css  3_serviceExp2.css  4_serviceExp3.css  5_login.css  6_findPW.css  7_selfCertification.css  8_changePW.css  9_changePW_complete.css  menuBar.css  (+4 more)
users/: helper.py  urls.py  views.py
(+53 files in other folders)
