[tool.poetry]
name = "smart-cut"
version = "0.1.0"
description = ""
authors = ["nohmyung <pakc918@naver.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "smart_cut"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
